--- a/nbs/dl2/03_MINI_BATCH_FROM_SCRATCH.ipynb
+++ b/nbs/dl2/03_MINI_BATCH_FROM_SCRATCH.ipynb
@@ -1531,11 +1531,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 620,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def trainModelEnhanced(learnableModel, dataLoader):\n",
+    "def trainModelEnhanced(learnableModel, dataLoader, validationDataLoader):\n",
     "    for epoch in range(epochs):\n",
     "        for _xTrain, _yTrain in dataLoader:\n",
     "            _preds = learnableModel(_xTrain)\n",
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
        "[tensor([0, 1]), tensor([2, 3]), tensor([4, 5]), tensor([6, 7]), tensor([8])]"
       ]
      },
-     "execution_count": 488,
+     "execution_count": 489,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1688,6 +1688,520 @@
    "source": [
     "rando = RandomSampler(9, 2, False)\n",
     "[batch for batch in rando]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 495,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "things = [\n",
+    "    \"One\",\n",
+    "    \"Two\",\n",
+    "    \"Three\",\n",
+    "    \"Four\",\n",
+    "    \"Five\",\n",
+    "    \"Six\",\n",
+    "    \"Seven\",\n",
+    "    \"Eight\",\n",
+    "    \"Nine\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 510,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Two', 'Four'], ['Six', 'Eight'], ['Seven', 'One'], ['Five', 'Three']]"
+      ]
+     },
+     "execution_count": 510,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rando = RandomSampler(8, 2)\n",
+    "[ list(map(lambda i: things[i], _batch)) for _batch in rando]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 599,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collateTuple(tupl):\n",
+    "    xColumn, yColumn = zip(*tupl)\n",
+    "    return torch.stack(xColumn), torch.stack(yColumn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 576,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EnhancedDataLoader:\n",
+    "    def __init__(self, dataSet, batchSize):\n",
+    "        self.dataSet = dataSet\n",
+    "        self.batchSize = batchSize\n",
+    "        self.sampler = RandomSampler(len(dataSet), batchSize)\n",
+    "    def __iter__(self):\n",
+    "        for _batch in self.sampler: yield collateTuple([ self.dataSet[_index] for _index in _batch])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 577,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testLoader = EnhancedDataLoader(things, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 600,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-600-47b7fd6958bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0m_thing\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtestLoader\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_thing\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-576-202329238b16>\u001b[0m in \u001b[0;36m__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msampler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomSampler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataSet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatchSize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__iter__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0m_batch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msampler\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32myield\u001b[0m \u001b[0mcollateTuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataSet\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0m_index\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_index\u001b[0m \u001b[0;32min\u001b[0m \u001b[0m_batch\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-599-fc0601719fcc>\u001b[0m in \u001b[0;36mcollateTuple\u001b[0;34m(tupl)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcollateTuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtupl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mxColumn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myColumn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtupl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxColumn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myColumn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "for _thing in testLoader: print(_thing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 585,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anotherTestLoader = EnhancedDataLoader(Dataset(inputBatch, expectedOutputBatch), 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 605,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 10)\n",
+      "(10, 10)\n",
+      "(10, 10)\n",
+      "(10, 10)\n",
+      "(10, 10)\n",
+      "(10, 10)\n",
+      "(4, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _thing in anotherTestLoader: \n",
+    "    a, b =_thing \n",
+    "    print((len(a), len(b)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 607,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newDigitModel = SelfLearningLibraryModel(columns, layerOutput, numberOfClasses.item(), learningRate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 608,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.0625)"
+      ]
+     },
+     "execution_count": 608,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(newDigitModel(inputBatch), expectedOutputBatch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 609,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainModelEnhanced(newDigitModel, EnhancedDataLoader(Dataset(xTrainingNormalized, yTraining), 75))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 612,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.9375)"
+      ]
+     },
+     "execution_count": 612,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(newDigitModel(inputBatch), expectedOutputBatch)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Libraries Data Stuff ._."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 611,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "from torch.utils.data import DataLoader, SequentialSampler, RandomSampler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 613,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brandNewDigitModel = SelfLearningLibraryModel(columns, layerOutput, numberOfClasses.item(), learningRate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 614,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.0469)"
+      ]
+     },
+     "execution_count": 614,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(brandNewDigitModel(inputBatch), expectedOutputBatch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 617,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainModelEnhanced(brandNewDigitModel, DataLoader(collate_fn=collateTuple, \n",
+    "                                                  dataset=Dataset(xTrainingNormalized, yTraining), \n",
+    "                                                  batch_size=75,\n",
+    "                                                  shuffle=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 618,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.9531)"
+      ]
+     },
+     "execution_count": 618,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(brandNewDigitModel(inputBatch), expectedOutputBatch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 619,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.9445)"
+      ]
+     },
+     "execution_count": 619,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(brandNewDigitModel(xValidationNormalized), yValidation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Better Validation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 635,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trainModelWithValidation(learnableModel, dataLoader, validationDataLoader, epochs):\n",
+    "    for epoch in range(epochs):\n",
+    "        for _xTrain, _yTrain in dataLoader:\n",
+    "            _preds = learnableModel(_xTrain)\n",
+    "            loss = realLossFunction(_preds, _yTrain)\n",
+    "            loss.backward()\n",
+    "            learnableModel.learn()\n",
+    "        accumulatedLoss, accumulatedAccuracy = 0.,0.\n",
+    "        for _xValidation, _yValidation in validationDataLoader:\n",
+    "            with torch.no_grad(): # do not produce gradients when running loss function\n",
+    "                _preds = learnableModel(_xValidation)\n",
+    "                accumulatedLoss += realLossFunction(_preds, _yValidation)\n",
+    "                accumulatedAccuracy += accuracy(_preds, _yValidation)\n",
+    "        numberOfItems = len(validationDataLoader)\n",
+    "        print(\"Epoch {}, Accuracy {}, Loss {}\".format(epoch, accumulatedAccuracy/numberOfItems, accumulatedLoss/numberOfItems))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 636,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fancyDigitModel = SelfLearningLibraryModel(columns, layerOutput, numberOfClasses.item(), learningRate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 637,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.1250)"
+      ]
+     },
+     "execution_count": 637,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(fancyDigitModel(inputBatch), expectedOutputBatch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 638,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Accuracy 0.9192036390304565, Loss 0.2772819995880127\n",
+      "Epoch 1, Accuracy 0.9257708191871643, Loss 0.28181517124176025\n",
+      "Epoch 2, Accuracy 0.9156214594841003, Loss 0.30584725737571716\n",
+      "Epoch 3, Accuracy 0.9494523406028748, Loss 0.18209196627140045\n",
+      "Epoch 4, Accuracy 0.9541289210319519, Loss 0.1749899834394455\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainModelWithValidation(fancyDigitModel, \n",
+    "                         DataLoader(collate_fn=collateTuple, \n",
+    "                                                  dataset=Dataset(xTrainingNormalized, yTraining), \n",
+    "                                                  batch_size=75,\n",
+    "                                                  shuffle=True), \n",
+    "                         DataLoader(collate_fn=collateTuple, \n",
+    "                                                  dataset=Dataset(xValidationNormalized, yValidation), \n",
+    "                                                  batch_size=75), \n",
+    "                         5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 634,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.9505)"
+      ]
+     },
+     "execution_count": 634,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(fancyDigitModel(xValidationNormalized), yValidation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 640,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def createDataLoaders(trainingDataSet, validationDataSet, batchSize, **kwargs):\n",
+    "    return (\n",
+    "        DataLoader(trainingDataSet, batch_size=batchSize, shuffle=True, **kwargs),\n",
+    "        DataLoader(validationDataSet, batch_size=batchSize*2, **kwargs)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 655,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testDigitModel = SelfLearningLibraryModel(columns, layerOutput, numberOfClasses.item(), learningRate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 656,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingDataLoader, validationDataLoader = createDataLoaders(Dataset(xTrainingNormalized, yTraining), \n",
+    "                                                             Dataset(xValidationNormalized, yValidation), \n",
+    "                                                             batchSize, \n",
+    "                                                             collate_fn=collateTuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 657,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.0997)"
+      ]
+     },
+     "execution_count": 657,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(testDigitModel(xValidationNormalized), yValidation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 658,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Accuracy 0.8950751423835754, Loss 0.4031490981578827\n",
+      "Epoch 1, Accuracy 0.804094135761261, Loss 0.8487293124198914\n",
+      "Epoch 2, Accuracy 0.9528283476829529, Loss 0.1820055991411209\n",
+      "Epoch 3, Accuracy 0.8481012582778931, Loss 1.1656832695007324\n",
+      "Epoch 4, Accuracy 0.9336432218551636, Loss 0.32268327474594116\n",
+      "Epoch 5, Accuracy 0.9587618708610535, Loss 0.18828605115413666\n",
+      "Epoch 6, Accuracy 0.962717592716217, Loss 0.15694169700145721\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainModelWithValidation(testDigitModel, trainingDataLoader, validationDataLoader, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 659,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.9623)"
+      ]
+     },
+     "execution_count": 659,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(testDigitModel(xValidationNormalized), yValidation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 663,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"notebook2script.py\", line 3, in <module>\n",
+      "    import json,fire,re\n",
+      "ModuleNotFoundError: No module named 'fire'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python notebook2script.py 03_MINI_BATCH_FROM_SCRATCH.ipynb"
    ]
   },
   {
